# UniversalProject

./: .travis.yml  CMakeLists.txt  makefile  sonar-project.properties
UniversalApp/Base/BaseCell/: BaseTableViewCell.h  BaseTableViewCell.m
